# catholic_catechism_api

./: .dockerignore  .gitignore  Dockerfile.fastapi  README.md  docker-compose.yml  nginx.conf  pyproject.toml
docker/prod/: Dockerfile.fastapi  Dockerfile.nginx  Dockerfile.qdrant  docker-compose.yml  docker-nginx-entrypoint.sh
nginx/: nginx-http-only.conf.template  nginx-https-final.conf.template  nginx.conf
pipelines/catechism_paragraphs_ingestion/: ingest_catechism_paragraphs.py
qdrant_data/: raft_state.json
qdrant_data/collections/Parágrafos do Catecismo (Hybrid Search)/: config.json
src/application/DTOs/: IngestionEmbeddings.py  QueryEmbedding.py  QueryValidation.py  RetrieveSucess.py  SearchOutput.py  SearchPipelineResult.py
src/application/services/: CatechismPageContentSplitter.py  CatechismParagraphsCollectionIngestor.py  CatechismParagraphsScrapper.py  QueryContextValidator.py
src/application/use_cases/: CatholicCatechismParagraphsRetriever.py  CatholicCatechismParagraphsSearcher.py
src/data/: query_scope.json  query_scope.py
src/infrastructure/query_classifier/: query_classifier.py
src/interface_adapters/composers/: catholic_catechism_hybrid_searcher_composer.py  catholic_catechism_paragraphs_retriever_composer.py
src/interface_adapters/controllers/: catholic_catechism_paragraphs_retriever_controller.py  catholic_catechism_paragraphs_searcher_controller.py
src/interface_adapters/interfaces/: controller_interface.py  fastembed_embedder_interface.py  ingestion_point_structures_creators_interface.py  qdrant_points_searcher_interface.py
(+117 files in other folders)
